--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"preview": "astro preview"
 	},
 	"dependencies": {
-		"astro": "1.6.0",
-		"reveal.js": "4.4.0"
+		"@astrojs/svelte": "2.1.1",
+		"astro": "2.4.5",
+		"reveal.js": "4.4.0",
+		"svelte": "3.54.0"
 	},
 	"devDependencies": {
 		"gh-pages": "4.0.0",
