feat: add section about JS frameworks

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	},
 	"dependencies": {
 		"@astrojs/svelte": "2.1.1",
-		"astro": "2.4.5",
+		"@astrojs/vue": "2.2.0",
+		"astro": "2.5.4",
 		"mermaid": "10.1.0",
 		"reveal.js": "4.4.0",
 		"reveal.js-mermaid-plugin": "1.1.0",
-		"svelte": "3.54.0"
+		"svelte": "3.54.0",
+		"vue": "3.2.30"
 	},
 	"devDependencies": {
 		"gh-pages": "4.0.0",
