--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "slides-template",
+	"name": "animation-techniques-overview",
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
@@ -10,17 +10,23 @@
 		"preview": "astro preview"
 	},
 	"dependencies": {
+		"@astrojs/react": "2.2.0",
 		"@astrojs/svelte": "2.1.1",
 		"@astrojs/vue": "2.2.0",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
 		"astro": "2.5.4",
+		"framer-motion": "10.12.16",
 		"mermaid": "10.1.0",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
 		"reveal.js": "4.4.0",
 		"reveal.js-mermaid-plugin": "1.1.0",
+		"sass": "1.55.0",
 		"svelte": "3.54.0",
 		"vue": "3.2.30"
 	},
 	"devDependencies": {
-		"gh-pages": "4.0.0",
-		"sass": "1.55.0"
+		"gh-pages": "4.0.0"
 	}
 }
