--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "astro/tsconfigs/strict",
 	"compilerOptions": {
 		"allowJs": true,
-		"jsx": "preserve"
+		"jsx": "react-jsx",
+		"jsxImportSource": "react"
 	}
 }
