--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
 		"@astrojs/vue": "2.2.0",
 		"@types/react": "18.0.21",
 		"@types/react-dom": "18.0.6",
+		"animejs": "3.2.1",
 		"astro": "2.5.4",
 		"framer-motion": "10.12.16",
+		"gsap": "3.11.5",
 		"mermaid": "10.1.0",
+		"motion": "10.16.2",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"reveal.js": "4.4.0",
