--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/react": "2.2.0",
 		"@astrojs/svelte": "2.1.1",
 		"@astrojs/vue": "2.2.0",
+		"@dotlottie/player-component": "1.4.0",
 		"@types/react": "18.0.21",
 		"@types/react-dom": "18.0.6",
 		"animejs": "3.2.1",
