--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "astro build",
 		"deploy": "pnpm build && gh-pages -d dist",
 		"dev": "astro dev",
-		"preview": "astro preview"
+		"preview": "astro preview",
+		"serve": "pnpm build && pnpm preview"
 	},
 	"dependencies": {
 		"@astrojs/react": "2.2.0",
